# zephyr_bluetooth

./: .config  .config.old  CMakeLists.txt  Kconfig  README.md  bt_config.h  common.ld  zephyr_bluetooth.cmake  zephyr_demo_init.c  zephyr_init.c
core/include/: zephyr.h
core/include/bluetooth/: addr.h  att.h  bluetooth.h  buf.h  gatt.h  hci.h  iso.h  l2cap.h  mesh.h  uuid.h
core/include/bluetooth/services/: ots.h
core/include/drivers/: hci_driver.h
core/include/logging/: log.h
core/include/net/: buf.h
core/include/settings/: settings.h
core/include/sys/: __assert.h
core/src/: Kconfig
core/src/common/: Kconfig  log.c  log.h
core/src/host/: Kconfig  Kconfig.l2cap  a2dp.c  addr.c  adv.c  aes_ccm.c  at.c  att.c  avdtp.c  br.c  buf.c  conn.c  crypto.c  direction.c  ecc.c  gatt.c  hci_common.c  hci_core.c  hci_ecc.c  hci_raw.c  hfp_hf.c  id.c  iso.c  keys.c  keys_br.c  l2cap.c  l2cap_br.c  rfcomm.c  scan.c  sdp.c  settings.c  smp.c  smp_null.c  ssp.c  testing.c  uuid.c
core/src/mesh/: access.c  adv_legacy.c  app_keys.c  cdb.c  rpl.c  subnet.c  transport.c
core/src/services/: Kconfig.bas  Kconfig.hrs  Kconfig.tps  bas.c  dis.c  hrs.c  tps.c
core/src/services/ots/: Kconfig  ots_l2cap.c
core/src/utils/: atomic_c.c  buf.c
examples/beacon/src/: main.c
examples/central/src/: main.c
examples/central_hr/src/: main.c
examples/central_ht/src/: main.c
examples/central_multilink/src/: central_multilink.c  main.c
examples/eddystone/src/: main.c
examples/handsfree/src/: main.c
examples/ibeacon/src/: main.c
examples/peripheral/src/: cts.c  main.c
examples/peripheral_csc/src/: main.c
examples/peripheral_dis/src/: main.c
examples/peripheral_esp/src/: main.c
examples/peripheral_hids/src/: hog.c  main.c
examples/peripheral_hr/src/: main.c
examples/peripheral_ht/src/: hts.c  main.c
examples/peripheral_identity/src/: main.c  peripheral_identity.c
examples/peripheral_ots/src/: main.c
examples/peripheral_sc_only/src/: main.c
examples/scan_adv/src/: main.c
logging/: log.h
osal/freertos/: k_mem_slab.c  k_mem_slab.h  k_os.c  k_os.h  k_poll.c  k_poll.h  k_queue.c  k_queue.h  k_work_q.c  k_work_q.h
